// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: anonymous users 1`] = `
<div
  style={
    {
      "height": "48px",
    }
  }
>
  <div
    className="navbar global-navbar"
    id="global-navigation"
  >
    <div
      className="global-navbar-inner"
    >
      <withAppStateContext(GlobalNavBranding) />
      <withAppStateContext(GlobalNavMenu)
        currentUser={
          {
            "dismissedNotices": {},
            "isLoggedIn": false,
          }
        }
        location={
          {
            "pathname": "",
          }
        }
      />
      <div
        className="global-navbar-menu global-navbar-menu-right"
      >
        <EmbedDocsPopupHelper />
        <withRouter(Search) />
        <withRouter(GlobalNavUser)
          currentUser={
            {
              "dismissedNotices": {},
              "isLoggedIn": false,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: logged in users 1`] = `
<div
  style={
    {
      "height": "48px",
    }
  }
>
  <div
    className="navbar global-navbar"
    id="global-navigation"
  >
    <div
      className="global-navbar-inner"
    >
      <withAppStateContext(GlobalNavBranding) />
      <withAppStateContext(GlobalNavMenu)
        currentUser={
          {
            "isLoggedIn": true,
          }
        }
        location={
          {
            "pathname": "",
          }
        }
      />
      <div
        className="global-navbar-menu global-navbar-menu-right"
      >
        <EmbedDocsPopupHelper />
        <withRouter(Search) />
        <withRouter(GlobalNavUser)
          currentUser={
            {
              "isLoggedIn": true,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
